syntax = "proto3";

option java_package = "com.example.studywithdaba.core.datastore.proto";
option java_multiple_files = true;

enum AppThemeProto {
    APP_THEME_Default = 0;
    APP_THEME_LIGHT = 1;
    APP_THEME_Dark = 2;

}