syntax = "proto3";
import "app_theme.proto";





option java_package = "com.example.studywithdaba.core.datastore.proto";
option java_multiple_files = true;

message UserPreferences {

    bool useDynamicColor = 1;
    AppThemeProto appThemeProto = 2;
    int32 notesGridSize = 3;

}